--- a/Personal practice/style.css
+++ b/Personal practice/style.css
@@ -1,6 +1,10 @@
-
+body{
+    background-color: #dad2de;
+    padding: 2%;
+}
 img{
-    width: 200px;
+    width: 198px;
+    box-shadow: 5px 5px 5px lightblue;
 }
 .zoom {
     padding: 50px;
@@ -10,23 +14,11 @@ img{
     margin: 0 auto;
 }
 .zoom:hover {
-    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
-#col2{
-    background-color: burlywood;
+.zoom:active {
+    transform: scale(0.8); /* (90% zoom) */
 }
-#list1{
-    background-color: darkgray;
-}
-#list2{
-    background-color: rgb(202, 194, 255);
-}
-#list3{
-    background-color: rgb(202, 194, 255)
-}
-.ul1{
-    background-color: aliceblue;
-}
-.para5{
-    background-color:rgb(255, 196, 162);
+footer{
+    text-align: center;
 }
