--- a/Parallex Website Effect/style.css
+++ b/Parallex Website Effect/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 #wrapper{
     height: 100vh;  
     overflow-x: hidden;
@@ -13,7 +14,7 @@
 }
 
 .container{
-    position: relative;
+    position: relative;      
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,20 +22,92 @@
     transform-style: preserve-3d;
     z-index: -1;
 }
+
+
 .background{
-    transform: translateZ(-40px) scale(5);
+    transform: translateZ(-40px) scale(6);
+}
+
+
+.forground{
+    transform: translateZ(-30px) scale(4);
+}
+
+
+.background, .forground{
     position: absolute;
     height: 100%;
     width: 100%;
-    z-index: -1;
     object-fit: cover;
+    z-index: -1;
+}
+
+
+h1{
+    position: absolute;
+    top: 5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    letter-spacing: 4px;
+    font-size: 10rem;
+    color: white;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    font-family: 'Roboto', sans-serif;
+}
+
+
+section{
+    background-color: rgb(45, 45, 45);
+    color: white;
+    padding: 5rem 0;
+}
+
+
+.secHeading{
+    font-size: 5rem;
+    padding: 0 10rem;
+}
+
+.text{
+    font-size: 1.5rem;
+    padding: 0 10rem;
+    margin: 5rem 0;
+}
+
+
+.desc{
+    position: absolute;
+    background-color: white;
+    padding: 0.5rem 2.5rem;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: black;
+    font-size: 3.5rem;
+    font-weight: 600;
 
 }
-.forground{
-    transform: translateZ(-20px) scale(4);
-    position: absolute;
-    height: 40%;
-    width: 40%;
-    z-index: -1;
-    object-fit: cover;
+
+
+.bg{
+    position: relative;
+    width: 100%;
+    background-attachment: fixed;
+    height: 500px;
+    background-size: cover;
+    background-position: center;
+}
+
+.bg1{
+    background-image: url(sport-1.jpg);
+}
+
+
+.bg2{
+    background-image: url(sport-2.jpg);
+}
+
+
+.bg3{
+    background-image: url(sport-3.jpg);
 }
